# SimpleSDW

./: LICENSE  README.md
simplesdw/: README.md  setup.cfg
simplesdw/src/ssdw.egg-info/: PKG-INFO  SOURCES.txt
src/simplesdw/: sdw.py
src/simplesdw.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
