[metadata]
name = ssdw
version = 0.0.2
author = Semeon Vlahotasios
author_email = svlahota@usc.edu
description = 'A simple and fast way to use the European Central Bank's Statistical Warehouse Data with Python.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/semeonv/simplesdw
project_urls =
    Bug Tracker = https://github.com/semeonv/SimpleSDW
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src